[package]
name = "p256-scw"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Oighty/p256scw"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Prototype smart contract wallet that uses a P256 signature scheme"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = "0.2.0"
hex = "0.4.3"
wee_alloc = "0.4.5"
p256 = { version = "0.13.2", features = ["ecdsa"] }
getrandom = { version = "0.2.10", features = ["js"] }

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
